Add flag name linter
A Feature flag linter was created to avoid letting others
create flags that are not following company standard.

--- a/config/default.yml
+++ b/config/default.yml
@@ -24,3 +24,9 @@ Rails5/StringConditional:
   Enabled: true
   SafeAutocorrect: false
   VersionAdded: '0.50'
+
+Flag/FeatureFlagName:
+  Description: 'Feature Flag Name is a cop that checks for if feature flag name is following TELUS specifications.'
+  Enabled: true
+  SafeAutocorrect: false
+  VersionAdded: '0.50'
