--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           ruby-version: ${{ env.RUBY_VERSION }}
-
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
 
       - name: Test
         run: bundle exec rspec
