Add cop to avoid the use of .update_attributes
This cop checks if a ruby file is using the method `update_attributes`.
This method is deprecated and will be removed on Rails 6.1.
This is part of the Rails 6 upgrade.

--- a/config/default.yml
+++ b/config/default.yml
@@ -42,3 +42,9 @@ Migration/ReservedWords:
   Enabled: true
   SafeAutocorrect: false
   VersionAdded: '0.52.0'
+
+Rails6/NoUpdateAttributes:
+  Description: 'NoUpdateAttributes is a cop that prevents the use of deprecated update_attributes that will be removed on Rails 6.1.'
+  Enabled: true
+  SafeAutocorrect: false
+  VersionAdded: '0.52.0'
